Fix the layout broken while the width of window is greater than 600px;

--- a/DCloudGatewayUI/GatewayUI/assets/static/css/site-dashboard.less
+++ b/DCloudGatewayUI/GatewayUI/assets/static/css/site-dashboard.less
@@ -304,7 +304,7 @@
 	background: url("/@{dashboard-image-path}/tab_hover_arrow.png");
 }
 
-@media screen and (max-height: 600px)
+@media screen and (max-height: 900px)
 {
 	.slide-box{
 	    .css3-transform(1s);
